# polaris-dave-simulation

./: .gitignore  README.md  adjust_thrust.py  angle.py  attack_dive.py  central_control_node.py  config.json  dive_test.py  maintain_dive.py  mcu.py  nautilus_glider_in_dave_ocean_waves.sh  node_simulation_bcu_test.py  node_time.py  package-lock.json  pitch_test.py  requirements.txt  run.sh  sea_pressure_depth_TO_pose.py  slocum_glider_in_dave_ocean_waves.sh  test.py  topic_bcu  topic_time.py
gazebo_plugins/sliding_mass_vel_slider_plugin/: CMakeLists.txt
gazebo_plugins/sliding_mass_vel_slider_plugin/src/: SlidingMassVelocitySliderPlugin.cc
src/py_pkg/: package.xml  setup.py
src/py_pkg/py_pkg/: __init__.py  dive_test.py
src/py_pkg/py_pkg/bladder_control/: __init__.py  depth_control_node.py  depth_control_node_ControlSystem.py
src/py_pkg/py_pkg/bladder_control_node/: depth_control_node.py  depth_control_node_ControlSystem.py  depth_control_node_config.py
src/py_pkg/py_pkg/legacy/: cmd_depth_node.py  node_simulation_bcu.py
tests/: cmd_pitch_node.py  glide_test.py
